BE minor changes